<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.audiopathanalyzer.activity.PreferencesActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/preferences_start_f"
                app:layout_constraintLeft_toRightOf="@id/preferences_label1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/preferences_label1"
                android:layout_marginEnd="75dp"
                android:layout_marginStart="250dp"
                android:importantForAutofill="no"
                android:hint="@string/sweep_start_frequency_tf" />

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/preferences_end_f"
                app:layout_constraintLeft_toLeftOf="@id/preferences_start_f"
                app:layout_constraintBottom_toBottomOf="@id/preferences_label2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/preferences_start_f"
                android:layout_marginEnd="75dp"
                android:importantForAutofill="no"
                android:hint="@string/sweep_end_frequency_tf" />

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/preferences_steps"
                app:layout_constraintLeft_toLeftOf="@id/preferences_start_f"
                app:layout_constraintBottom_toBottomOf="@id/preferences_label3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/preferences_start_f"
                android:layout_marginEnd="75dp"
                android:importantForAutofill="no"
                android:hint="@string/sweep_steps_tf" />

        <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/enable_smoothing"
                app:layout_constraintLeft_toLeftOf="@id/preferences_start_f"
                app:layout_constraintBottom_toBottomOf="@id/preferences_label4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/preferences_start_f"
                android:layout_marginEnd="45dp"
                android:importantForAutofill="no"/>

        <TextView
                android:text="@string/sweep_start_frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/preferences_label1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/preferences_start_f"
                android:layout_marginStart="75dp"/>

        <TextView
                android:text="@string/sweep_end_frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/preferences_label2"
                android:layout_marginTop="45dp"
                app:layout_constraintStart_toStartOf="@id/preferences_label1"
                app:layout_constraintTop_toBottomOf="@id/preferences_label1"/>

        <TextView
                android:text="@string/sweep_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/preferences_label3"
                android:layout_marginTop="45dp"
                app:layout_constraintStart_toStartOf="@id/preferences_label2"
                app:layout_constraintTop_toBottomOf="@id/preferences_label2"/>

        <TextView
                android:text="@string/enable_smoothing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/preferences_label4"
                android:layout_marginTop="45dp"
                app:layout_constraintStart_toStartOf="@id/preferences_label3"
                app:layout_constraintTop_toBottomOf="@id/preferences_label3"/>

        <Button android:text="@string/save_changes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                app:layout_constraintEnd_toEndOf="@id/preferences_steps"
                app:layout_constraintTop_toBottomOf="@id/preferences_label4"
                android:onClick="saveChanges"
                android:id="@+id/preferences_save"/>

        <Button android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/preferences_save"
                app:layout_constraintTop_toTopOf="@id/preferences_save"
                android:onClick="cancel"
                android:id="@+id/preferences_cancel"/>

        <Button android:text="@string/recalibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="recalibrate"
                app:layout_constraintStart_toStartOf="@id/preferences_label4"
                app:layout_constraintTop_toTopOf="@id/preferences_save"
                android:id="@+id/preferences_recalibrate"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
