<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.StartMeasurementActivity">

    <Button
            android:id="@+id/start_measurement"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_shape"
            android:text="@string/new_measurement"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="11sp"
            android:paddingTop="80dp"
            android:onClick="startMeasurement"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp"/>

    <ImageView
            android:contentDescription="@string/new_measurement"
            android:src="@drawable/ic_signal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="30dp"
            android:layout_width="70dp"
            android:layout_height="70dp"/>

    <Button
            android:id="@+id/preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableEnd="@drawable/ic_settings"
            android:drawablePadding="10dp"
            android:text="@string/preferences"
            android:padding="10dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@android:color/transparent"
            android:textSize="14sp"
            android:onClick="openPreferences"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginEnd="15dp"/>

    <Button
            android:id="@+id/open_measurement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="openMeasurement"
            android:drawableEnd="@drawable/ic_open"
            android:drawablePadding="10dp"
            android:text="@string/open_measurement"
            android:padding="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@android:color/transparent"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>